--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -17,3 +17,7 @@ jobs:
     - uses: actions/checkout@v2
     - run: |
         git fetch --prune --unshallow
+    
+    - name: compilar
+      run: |
+         make all
